# hana

./: .gitignore  .rustfmt.toml  .taplo.toml  CHANGELOG.md  Cargo.toml  LayoutTextStyle.md  PLAN.md  README.md  bacon.toml  claude_spike_plan.md  mend.toml  networking_next_steps.md  protocol_plan.md  readme.md  rustfmt.toml  spike_plan.md  taplo.toml  typography_plan.md
crates/bevy_clerestory/: .gitignore  CHANGELOG.md  Cargo.toml  README.md
crates/bevy_clerestory/docs/: bevy-issue-macos-fullscreen-panic.md
crates/bevy_clerestory/examples/: custom_app_name.rs  custom_path.rs
crates/bevy_clerestory/src/: constants.rs  events.rs  lib.rs  macos_tabbing_fix.rs  managed.rs  monitor.rs  monitors.rs  platform.rs  restore_window_config.rs  visibility.rs  windows_dpi_fix.rs  x11_position_fix.rs
crates/bevy_clerestory/tests/: macos_monitor_reconnect.md
crates/bevy_diegetic/: CHANGELOG.md  Cargo.toml  NOTICE  README.md
crates/bevy_diegetic/benches/: glyph_rasterization.rs  layout_comparison.rs  layout_engine_raw.rs  panel_perf.rs
crates/bevy_diegetic/examples/: aa_text.rs  analytic_line_probe.rs  atlas_pages.rs  batch_validation.rs  cascade.rs  depth_bias_stress.rs  diegetic_panel_stress.rs  diegetic_text_stress.rs  dimensions.rs  font_features.rs  font_loading.rs  glyph_batch_proof.rs  hue_offset.rs  ime.rs  line_grazing.rs  oit_msaa.rs  oit_oob_bwm.rs  oit_oob_cpu_probe.rs  oit_oob_detector.rs  oit_oob_forced.rs  oit_oob_isolate.rs  oit_resize_repro.rs  panel_anchoring.rs  panel_draw_order.rs  panel_rendering.rs  paper_sizes.rs  preload_text.rs  screen_space.rs  screen_world_panel_conversion.rs  sdf.rs  shadow_receiver_repro.rs  shadows.rs  side_by_side.rs  sizes.rs  slug_text.rs  taa_shimmer.rs  text_alpha.rs  text_draw_layer.rs  text_renderer_gpu_bench.rs  text_stress.rs  (+4 more)
crates/bevy_diegetic/src/: callouts.rs  constants.rs  fluent.rs  lib.rs  sugar.rs
crates/bevy_diegetic/tests/: trybuild.rs
crates/bevy_kana/: CHANGELOG.md  Cargo.toml  README.md  mend.toml
crates/bevy_kana/examples/: basics.rs  cascade.rs
crates/bevy_kana/src/: cascade.rs  lib.rs  prelude.rs
crates/bevy_lagrange/: CHANGELOG.md  Cargo.toml  README.md
crates/bevy_lagrange/docs/: egui.md
crates/bevy_lagrange/examples/: advanced.rs  animation.rs  basic.rs  custom_bindings.rs  egui.rs  focus_bounds.rs  follow_target.rs  free_cam.rs  input_custom.rs  input_gamepad.rs  input_keyboard.rs  input_manual.rs  input_preset_blender_like.rs  input_preset_simple.rs  keyboard_controls.rs  orbit_cam_bindings_gamepad.rs  orbit_cam_bindings_keyboard.rs  orbit_cam_manual.rs  orbit_cam_preset_blender_like.rs  orbit_cam_preset_simple_mouse.rs  orthographic.rs  pausing.rs  programmatic_control.rs  render_to_texture.rs  swapped_axis.rs  viewports_windows.rs  zoom_to_fit.rs
crates/bevy_lagrange/src/: animation.rs  camera_basis.rs  camera_home.rs  camera_kind.rs  components.rs  constants.rs  egui.rs  enhanced_input.rs  fit.rs  initialization.rs  input.rs  interpolation.rs  lib.rs  operation.rs  orbital_math.rs  projection.rs  system_sets.rs  time_source.rs  touch.rs
crates/bevy_liminal/: .gitignore  CHANGELOG.md  Cargo.toml  README.md  rustfmt.toml
crates/bevy_liminal/docs/: improvements.md
crates/bevy_liminal/examples/: all_modes.rs  glowing.rs  intersecting.rs  msaa.rs  outline_mode.rs  outline_propagation.rs  simple.rs  transparent.rs
crates/bevy_liminal/scripts/: compare_benchmarks.py
crates/bevy_liminal/src/: camera.rs  compose.rs  constants.rs  extract.rs  flood.rs  indexing_mode.rs  lib.rs  mask.rs  mask_pipeline.rs  node.rs  outline.rs  outline_builder.rs  outline_normals.rs  propagation.rs  queue.rs  render.rs  shaders.rs  texture.rs  uniforms.rs  view.rs
crates/bevy_valence/: Cargo.toml  README.md
crates/bevy_valence/src/: lib.rs
crates/fairy_dust/: Cargo.toml  README.md
crates/fairy_dust/examples/: diegetic_mutation.rs
crates/fairy_dust/src/: bloom.rs  brp_extras.rs  camera_control_panel.rs  camera_home.rs  connector.rs  constants.rs  cube_spin.rs  environment_map.rs  fold_controls.rs  hdr.rs  lib.rs  lighting.rs  orbit_cam.rs  primitive.rs  release_hold.rs  restart.rs  restart_camera.rs  save_window_position.rs  screen_panels.rs  screen_space_lights.rs  shortcuts.rs  theme.rs  transparency.rs  unclamp.rs
crates/fairy_dust/tests/: trybuild.rs
crates/hana/: Cargo.toml
crates/hana/src/: basic.rs  basic_viz.rs  camera.rs  error.rs  error_handling.rs  main.rs  oscillating_gizmo.rs  prelude.rs  splash.rs  tokio_runtime.rs  visualization_process.rs
crates/hana_async/: Cargo.toml
crates/hana_async/src/: error.rs  lib.rs  runtime.rs  worker.rs
crates/hana_conduit/: Cargo.toml  README.md
crates/hana_conduit/plan/: ARCHITECTURE.md  CROSS_SECTION_PROFILES.md
crates/hana_conduit/src/: gizmos.rs  lib.rs
crates/hana_conduit/tests/: endpoint_tests.rs  routing_tests.rs
crates/hana_lading/: Cargo.toml  README.md
crates/hana_lading/examples/: catastrophic_failure.rs  degraded_failure.rs  successful_loading.rs
crates/hana_lading/src/: disk_asset_loader.rs  events.rs  lading_plugin.rs  lib.rs
crates/hana_network/: Cargo.toml  README.md  migration_plan.md
crates/hana_network/src/: endpoint.rs  error.rs  lib.rs  message.rs  role.rs
crates/hana_plugin/: Cargo.toml
crates/hana_plugin/src/: error.rs  instruction_receiver.rs  lib.rs  plugin.rs  visualization_control.rs
crates/hana_process/: Cargo.toml
crates/hana_process/src/: error.rs  lib.rs  process.rs  process_control.rs
crates/hana_process/tests/: process_tests.rs
crates/hana_prosody/: Cargo.toml  README.md  build.rs
crates/hana_prosody/examples/: voice_sidecar.rs
crates/hana_prosody/src/: audio.rs  constants.rs  event_log.rs  lib.rs  session.rs  stt.rs  vad.rs
crates/hana_prosody/tests/: voice_diagnostics.rs
crates/hana_valence/: CHANGELOG.md  Cargo.toml  README.md  fixtures.rs
crates/hana_valence/examples/: box.rs  box_net.rs  staggered_unfold.rs  triangle_accordion.rs  triangles.rs
crates/hana_valence/src/: arrange.rs  (+8 more)
crates/hana_viz/: Cargo.toml
crates/hana_voice_sidecar/: Cargo.toml  README.md
(+1686 files in other folders)
