[workspace]
exclude  = ["crates/hana", "vendor/clay-layout"]
members  = ["crates/*"]
resolver = "3"

[workspace.package]
authors    = ["natepiano"]
edition    = "2024"
license    = "MIT OR Apache-2.0"
repository = "https://github.com/natepiano/hana"
version    = "0.0.1"

[workspace.dependencies]
bevy = { version = "0.19.0", default-features = false }
hana_conduit = { path = "crates/hana_conduit" }
bevy_diagnostic = "0.19.0"
bevy_enhanced_input = { version = "0.26.0", default-features = false, features = [
  "reflect",
] }
bevy_kana = { path = "crates/bevy_kana" }
bevy_render = "0.19.0"
bitflags = "2"
bytemuck = "1"
earshot = "1.1.0"
getrandom = { version = "0.4.3", features = ["wasm_js"] }
image = { version = "0.25", default-features = false }
nonmax = "0.5"
parley = { version = "0.9.0", default-features = false, features = ["std"] }
rand = "0.10.1"
smallvec = "1"
trybuild = "1"
ttf-parser = "0.25"

# dev-dependencies
bevy_brp_extras = "0.20.1"
bevy_clerestory = { path = "crates/bevy_clerestory" }
bevy_diegetic   = { path = "crates/bevy_diegetic" }
bevy_lagrange   = { path = "crates/bevy_lagrange" }
bevy_valence    = { path = "crates/bevy_valence" }
clay-layout     = { path = "vendor/clay-layout" }
criterion       = { version = "0.8.2", features = ["html_reports"] }
fairy_dust      = { path = "crates/fairy_dust" }
float-cmp       = "0.10.0"

[workspace.lints.clippy]
# Our strict lints
allow_attributes_without_reason = "deny"
expect_used                     = "deny"
panic                           = "deny"
self_named_module_files         = "deny" # use module/mod.rs (directory form) when a module has submodules
unreachable                     = "deny"
unwrap_used                     = "deny"

# Enable lint groups as errors (with lower priority so allows can override)
all      = { level = "deny", priority = -1 }
cargo    = { level = "deny", priority = -1 }
nursery  = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }

# Universal allows
multiple_crate_versions = "allow"
redundant_feature_names = "allow" # `bench_support` names a private benchmark support surface.
redundant_pub_crate     = "allow"

# Allow specific lints that conflict with Bevy patterns
needless_pass_by_value = "allow"
option_if_let_else     = "allow"
too_many_arguments     = "allow"
type_complexity        = "allow"
wildcard_imports       = "allow"

[workspace.lints.rust]
missing_docs = "deny"

# Optimize dependencies even in dev builds; keeps own-crate incremental compiles fast.
[profile.dev.package."*"]
opt-level = 3
