[package]
categories           = ["game-development", "gui"]
description          = "Diegetic UI layout engine for Bevy — in-world panels driven by a Clay-inspired layout algorithm"
edition.workspace    = true
keywords             = ["bevy", "diegetic", "layout", "ui"]
license.workspace    = true
name                 = "bevy_diegetic"
readme.workspace     = true
repository.workspace = true
version.workspace    = true

[lints]
workspace = true

[features]
default            = ["typography_overlay"]
typography_overlay = []

[dependencies]
bevy = { workspace = true, features = [
  "bevy_anti_alias",
  "bevy_asset",
  "bevy_core_pipeline",
  "bevy_gizmos",
  "bevy_image",
  "bevy_log",
  "bevy_pbr",
  "bevy_picking",
  "bevy_render",
  "mesh_picking",
] }
bevy_kana = { workspace = true }
bitflags = { workspace = true }
etagere = { workspace = true }
fdsm = { workspace = true }
fdsm-ttf-parser = { workspace = true }
image = { workspace = true }
nalgebra = { workspace = true }
parley = { workspace = true }
smallvec = { workspace = true }
ttf-parser = { workspace = true }

[dev-dependencies]
bevy                = { version = "0.18.1", features = ["default_font"] }
bevy-inspector-egui = { workspace = true }
bevy_brp_extras     = { workspace = true }
bevy_lagrange       = { workspace = true, features = ["fit_overlay"] }
bevy_window_manager = { workspace = true }
clay-layout         = { workspace = true }
criterion           = { workspace = true }
image               = { workspace = true, features = ["png"] }
msdfgen             = { workspace = true }
ttf-parser_018      = { workspace = true }

[[example]]
name = "hue_offset"

[[example]]
name = "side_by_side"

[[bench]]
harness = false
name    = "layout_comparison"

[[bench]]
harness = false
name    = "panel_perf"

[[example]]
name              = "typography"
required-features = ["typography_overlay"]

[[example]]
name = "shadows"

[[example]]
name = "atlas_pages"

[[example]]
name = "font_loading"

[[example]]
name = "preload_text"

[[example]]
name = "font_features"

[[example]]
name = "units"

[[example]]
name = "sizes"

[[example]]
name = "dimensions"

[[example]]
name = "panel_rendering"

[[example]]
name = "paper_sizes"

[[example]]
name = "screen_space"

[[example]]
name = "taa_shimmer"
