[package]
authors.workspace    = true
categories           = ["game-development", "gui"]
description          = "Diegetic UI layout engine for Bevy — in-world panels driven by a Clay-inspired layout algorithm"
edition.workspace    = true
homepage             = "https://github.com/natepiano/hana/tree/main/crates/bevy_diegetic"
keywords             = ["bevy", "diegetic", "layout", "ui"]
license.workspace    = true
name                 = "bevy_diegetic"
readme               = "README.md"
repository.workspace = true
version.workspace    = true

[lints]
workspace = true

[features]
batch_proof        = []
bench_support      = []
default            = ["typography_overlay"]
trace_chrome       = ["bevy/trace_chrome"]
typography_overlay = []

[dependencies]
bevy = { workspace = true, features = [
  "bevy_anti_alias",
  "bevy_asset",
  "bevy_core_pipeline",
  "bevy_gizmos",
  "bevy_image",
  "bevy_log",
  "bevy_pbr",
  "bevy_picking",
  "bevy_render",
  "mesh_picking",
] }
bevy_kana = { workspace = true }
bitflags = { workspace = true }
image = { workspace = true }
parley = { workspace = true }
smallvec = { workspace = true }
ttf-parser = { workspace = true }

[dev-dependencies]
bevy                = { version = "0.19.0-rc.2", features = ["default_font"] }
bevy_brp_extras     = { workspace = true }
bevy_lagrange       = { workspace = true, features = ["fit_overlay"] }
bevy_window_manager = { workspace = true }
clay-layout         = { workspace = true }
criterion           = { workspace = true }
fairy_dust          = { path = "../fairy_dust" }
image               = { workspace = true, features = ["png"] }
trybuild            = { workspace = true }
wgpu                = "29"

[[example]]
name = "side_by_side"

[[bench]]
harness           = false
name              = "layout_comparison"
required-features = ["bench_support"]

[[bench]]
harness           = false
name              = "panel_perf"
required-features = ["bench_support"]

[[bench]]
harness           = false
name              = "layout_engine_raw"
required-features = ["bench_support"]

[[example]]
name              = "typography"
required-features = ["typography_overlay"]

[[example]]
name = "font_loading"

[[example]]
name = "font_features"

[[example]]
name = "units"

[[example]]
name = "analytic_line_probe"

[[example]]
name = "sizes"

[[example]]
name = "dimensions"

[[example]]
name = "panel_rendering"

[[example]]
name = "paper_sizes"

[[example]]
name = "screen_space"

[[example]]
name = "slug_text"

[[example]]
name              = "glyph_batch_proof"
required-features = ["batch_proof"]
