[package]
authors.workspace    = true
categories           = ["game-development", "game-engines"]
description          = "Ergonomic, opinionated utilities for Bevy — type-safe math, input wiring, and more"
edition.workspace    = true
homepage             = "https://github.com/natepiano/hana/tree/main/crates/bevy_kana"
keywords             = ["bevy", "ecs", "gamedev", "input", "math"]
license.workspace    = true
name                 = "bevy_kana"
readme               = "README.md"
repository.workspace = true
version              = "0.2.0-dev"

[lints]
workspace = true

[features]
default = ["math"]
input   = ["dep:bevy_enhanced_input"]
math    = []

[dependencies]
bevy                = { workspace = true }
bevy_enhanced_input = { workspace = true, optional = true }
