[package]
authors.workspace = true
categories        = ["game-development"]
description       = "Bevy camera controller with pan, orbit, zoom-to-fit, queued animations, and trackpad support"
edition.workspace = true
homepage          = "https://github.com/natepiano/bevy_lagrange"
keywords          = ["bevy", "camera", "gamedev", "orbit"]
license.workspace = true
name              = "bevy_lagrange"
readme.workspace  = true
repository        = "https://github.com/natepiano/bevy_lagrange"
version           = "0.0.3-dev"

[lints]
workspace = true

[features]
bevy_egui = ["dep:bevy_egui"]
fit_overlay = [
  "bevy/bevy_asset",
  "bevy/bevy_gizmos",
  "bevy/bevy_mesh",
  "bevy/bevy_pbr",
  "bevy/bevy_picking",
  "bevy/bevy_state",
  "bevy/bevy_text",
  "bevy/bevy_ui",
]

[dependencies]
bevy = { workspace = true, features = [
  "bevy_camera",
  "bevy_core_pipeline",
  "bevy_log",
  "bevy_window",
] }
bevy_egui = { workspace = true, optional = true }
bevy_kana = { workspace = true, features = ["input"] }

[dev-dependencies]
bevy                = { workspace = true, features = ["3d"] }
bevy_brp_extras     = { workspace = true }
bevy_egui           = { workspace = true, features = ["default_fonts", "render"] }
bevy_window_manager = { workspace = true }
float-cmp           = { workspace = true }

[[example]]
name              = "egui"
required-features = ["bevy_egui"]

[[example]]
name              = "showcase"
required-features = ["fit_overlay"]

[[example]]
name              = "zoom_to_fit"
required-features = ["fit_overlay"]

[[example]]
name = "animation"

[[example]]
name = "degenerate_angle_test"
path = "examples/degenerate_angle_test/main.rs"
