[package]
authors.workspace    = true
categories           = ["game-development"]
description          = "Bevy camera controller with pan, orbit, zoom-to-fit, queued animations, and trackpad support"
edition.workspace    = true
homepage             = "https://github.com/natepiano/hana/tree/main/crates/bevy_lagrange"
keywords             = ["bevy", "camera", "gamedev", "orbit"]
license.workspace    = true
name                 = "bevy_lagrange"
readme               = "README.md"
repository.workspace = true
version              = "0.2.0-dev"

[lints]
workspace = true

[features]
default = ["reflect-input-modes"]
fit_overlay = [
  "bevy/bevy_asset",
  "bevy/bevy_mesh",
  "bevy/bevy_pbr",
  "bevy/bevy_picking",
  "bevy/bevy_text",
  "bevy/bevy_ui",
  "bevy/bevy_ui_render",
]
reflect-input-modes = []

[dependencies]
bevy = { workspace = true, features = [
  "bevy_camera",
  "bevy_core_pipeline",
  "bevy_log",
  "bevy_window",
] }
bevy_enhanced_input = { workspace = true }
bevy_kana = { workspace = true }
bitflags = { workspace = true }

[dev-dependencies]
bevy            = { workspace = true, features = ["3d"] }
bevy_brp_extras = { workspace = true }
bevy_clerestory = { workspace = true }
bevy_diegetic   = { workspace = true }
fairy_dust      = { workspace = true }
float-cmp       = { workspace = true }

[[example]]
name              = "showcase"
required-features = ["fit_overlay"]

[[example]]
name = "zoom_to_fit"

[[example]]
name = "animation"
