[package]
authors.workspace    = true
categories           = ["development-tools", "game-development"]
description          = "Workspace example helper — quiet logs and opt-in dev capabilities for bevy_hana examples"
edition.workspace    = true
keywords             = ["bevy", "dev", "examples"]
license.workspace    = true
name                 = "fairy_dust"
readme.workspace     = true
repository.workspace = true
version.workspace    = true

[lints]
workspace = true

[dependencies]
bevy = { workspace = true, features = [
  "bevy_anti_alias",
  "bevy_asset",
  "bevy_core_pipeline",
  "bevy_gizmos",
  "bevy_image",
  "bevy_log",
  "bevy_pbr",
  "bevy_picking",
  "bevy_render",
  "bevy_winit",
  "default_font",
  "mesh_picking",
  "multi_threaded",
] }
bevy_brp_extras = { workspace = true }
bevy_diegetic = { path = "../bevy_diegetic" }
bevy_lagrange = { workspace = true }
bevy_window_manager = { workspace = true }
