[package]
edition.workspace = true
name              = "hana_async"
version.workspace = true

[lints]
workspace = true

[dependencies]
bevy.workspace        = true
error-stack.workspace = true
flume.workspace       = true
hana_const.workspace  = true
thiserror.workspace   = true
tokio.workspace       = true
