[package]
authors.workspace    = true
categories           = ["game-development", "rendering"]
description          = "Physics-based 3D cable routing with catenary geometry and automatic pathfinding for Bevy"
edition.workspace    = true
homepage             = "https://github.com/natepiano/hana/tree/main/crates/hana_conduit"
keywords             = ["3d", "bevy", "cable", "catenary", "routing"]
license.workspace    = true
name                 = "hana_conduit"
readme               = "README.md"
repository.workspace = true
version              = "0.1.0"

[lints]
workspace = true

[dependencies]
bevy = { workspace = true, features = [
  "bevy_asset",
  "bevy_gizmos",
  "bevy_mesh",
  "bevy_pbr",
  "bevy_render",
] }
bevy_kana = { workspace = true }

[[example]]
name = "playground"
path = "examples/playground/main.rs"

[dev-dependencies]
bevy          = { workspace = true, features = ["default"] }
bevy_lagrange = { workspace = true, features = ["fit_overlay"] }
fairy_dust    = { workspace = true }
hana_diegetic = { workspace = true }
