[package]
authors.workspace    = true
categories           = ["game-development"]
description          = "Startup disk-asset loading, completion tracking, and failure reporting for Bevy."
edition.workspace    = true
homepage             = "https://github.com/natepiano/hana/tree/main/crates/hana_lading"
keywords             = ["bevy", "assets", "loading"]
license.workspace    = true
name                 = "hana_lading"
readme               = "README.md"
repository.workspace = true
version.workspace    = true

[lints]
workspace = true

[dependencies]
bevy_app   = { workspace = true }
bevy_asset = { workspace = true }
bevy_ecs   = { workspace = true }
tracing    = { workspace = true }

[dev-dependencies]
bevy = { workspace = true }
