[package]
edition = "2024"
name    = "hana_network"
version = "0.1.0"

[dependencies]
bincode               = { version = "1.3.3" }
error-stack.workspace = true
serde                 = "1.0.218"
tempfile.workspace    = true
thiserror.workspace   = true
tokio.workspace       = true
tracing.workspace     = true
