[package]
edition.workspace = true
name              = "hana_network"
version.workspace = true

[lints]
workspace = true

[dependencies]
bincode               = { version = "1.3.3" }
error-stack.workspace = true
serde                 = "1.0.218"
tempfile.workspace    = true
thiserror.workspace   = true
tokio.workspace       = true
tracing.workspace     = true
