[package]
edition.workspace = true
name              = "hana_network"
version.workspace = true

[lints]
workspace = true

[dependencies]
bincode               = { version = "2.0.1" }
error-stack.workspace = true
tempfile.workspace    = true
thiserror.workspace   = true
tokio.workspace       = true
tracing.workspace     = true
