[package]
edition.workspace = true
name              = "hana_plugin"
version.workspace = true

[lints]
workspace = true
[dependencies]
bevy.workspace         = true
error-stack.workspace  = true
hana_network.workspace = true
thiserror.workspace    = true
tokio.workspace        = true
tracing.workspace      = true
