[package]
edition = "2024"
name    = "hana_process"
version = "0.1.0"

[[bin]]
name = "hana_helper"
path = "src/bin/hana_helper.rs"

[target.'cfg(target_os = "macos")'.dependencies]
libc = "0.2.170"

[dependencies]
bevy.workspace        = true
error-stack.workspace = true
thiserror.workspace   = true
tokio.workspace       = true
tracing.workspace     = true
