[package]
edition.workspace = true
name              = "hana_process"
version.workspace = true

[[bin]]
name = "hana_helper"
path = "src/bin/hana_helper.rs"

[lints]
workspace = true

[dependencies]
bevy.workspace        = true
error-stack.workspace = true
thiserror.workspace   = true
tokio.workspace       = true
tracing.workspace     = true
