[package]
authors.workspace    = true
categories           = ["development-tools", "game-development", "multimedia"]
description          = "Keyboard-driven Hana prosody POC with microphone capture, Apple Speech, JSONL output, and Bevy feedback"
edition.workspace    = true
homepage             = "https://github.com/natepiano/hana/tree/main/crates/hana_prosody"
keywords             = ["audio", "bevy", "hana", "prosody", "voice"]
license.workspace    = true
name                 = "hana_prosody"
readme               = "README.md"
repository.workspace = true
version.workspace    = true

[lints]
workspace = true

[dependencies]
bevy_kana  = { workspace = true }
cpal       = "0.18.1"
hound      = "3.5.1"
serde      = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[target.'cfg(target_os = "macos")'.dependencies]
speech = "0.8.7"

[dev-dependencies]
bevy          = { workspace = true }
bevy_diegetic = { workspace = true }
bevy_lagrange = { workspace = true }
fairy_dust    = { workspace = true }
