[package]
authors.workspace    = true
categories           = ["game-development"]
description          = "hana_valence provides the bonds that create interesting patterns"
edition.workspace    = true
homepage             = "https://github.com/natepiano/hana/tree/main/crates/hana_valence"
keywords             = ["bevy", "gamedev"]
license.workspace    = true
name                 = "hana_valence"
readme               = "README.md"
repository.workspace = true
version              = "0.1.0"

[lints]
workspace = true

[dependencies]
bevy.workspace = true
