[package]
edition.workspace = true
name              = "hana_viz"
version.workspace = true

[lints]
workspace = true

[dependencies]
bevy.workspace         = true
error-stack.workspace  = true
hana_async.workspace   = true
hana_network.workspace = true
hana_process.workspace = true
thiserror.workspace    = true
tokio.workspace        = true
